--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,11 @@
     "git": "^0.1.5",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "passport-google-oauth2": "^0.2.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   },
   "name": "backend",
   "version": "1.0.0",
