--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "git": "^0.1.5",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
